feat : update response json report
